--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -137,6 +137,7 @@
     "Usinagem_Engr_CDZ_5ª",
     "Usinagem_Coroinha",
     "Usinagem_Luva_1ª2ª",
-    "Usinagem_Luva_3ª4ª"
+    "Usinagem_Luva_3ª4ª",
+    "Usinagem_Luva_5ª"
   ]
 }
