--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -138,6 +138,7 @@
     "Usinagem_Coroinha",
     "Usinagem_Luva_1ª2ª",
     "Usinagem_Luva_3ª4ª",
-    "Usinagem_Luva_5ª"
+    "Usinagem_Luva_5ª",
+    "Usinagem_Marcha_Re"
   ]
 }
