--- a/Levantamento de Perdas/Src/App.fx.yaml
+++ b/Levantamento de Perdas/Src/App.fx.yaml
@@ -52,7 +52,7 @@ App As appinfo:
          */
         
         
-        
+         { Role: "Usinagem_Marcha_Ré",Screen: Usinagem_Marcha_Re },
          { Role: "Usinagem_Luva_5ª",Screen: Usinagem_Luva_5ª },
          { Role: "Usinagem_Luva_3ª4ª",Screen: Usinagem_Luva_3ª4ª },
          { Role: "Usinagem_Luva_1ª2ª",Screen: Usinagem_Luva_1ª2ª },
