--- a/Levantamento de Perdas/Src/Usinagem_Marcha_Re.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Marcha_Re.fx.yaml
@@ -1,38 +1,38 @@
-Usinagem_Luva_5ª As screen:
+Usinagem_Marcha_Re As screen:
     BackgroundImage: =Transmissões_foto_bw
     ImagePosition: =ImagePosition.Fill
 
-    Image3_17 As image:
+    Image3_16 As image:
         Height: =968
-        Image: ='Usinagem_Luva_5ª_1'
+        Image: ='Usinagem_Marcha_Ré'
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
         ZIndex: =1
 
-    Label_setor_17 As label:
+    Label_setor_16 As label:
         Height: =70
         Size: =21
-        Text: ="Usinagem Luva 5ª"
+        Text: ="Usinagem Marcha Ré"
         Visible: =false
         Width: =560
         X: =41
         ZIndex: =2
 
-    Label_Local_17 As button:
+    Label_Local_16 As button:
         Align: =Align.Left
         DisplayMode: =DisplayMode.View
         Height: =88
         Size: =24
         Text: |-
-            ="Linha Usinagem Luva 5ª
+            ="Linha Usinagem Marcha Ré
             UTE 2913"
         Width: =622
         X: =18
         Y: =36
         ZIndex: =3
 
-    Icon1_25 As icon.Home:
+    Icon1_24 As icon.Home:
         BorderColor: =RGBA(255, 255, 255, 1)
         Color: =RGBA(255, 255, 255, 1)
         FocusedBorderThickness: =1
@@ -48,19 +48,19 @@ Usinagem_Luva_5ª As screen:
         Y: =36
         ZIndex: =4
 
-    Btnmaq_152 As button:
+    Btnmaq_150 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =125
+        Height: =169
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "961502075");
-            Set( varsetor ,  Label_setor_17.Text );
+            =Set( varmaquina , "1500570");
+            Set( varsetor ,  Label_setor_16.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
             Set( varselect , 1) ;
@@ -69,24 +69,24 @@ Usinagem_Luva_5ª As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =272
-        X: =341
-        Y: =206
+        Width: =151
+        X: =473
+        Y: =363
         ZIndex: =5
 
-    Btnmaq_158 As button:
+    Btnmaq_151 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =125
+        Height: =169
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "3353217007");
-            Set( varsetor ,  Label_setor_17.Text );
+            =Set( varmaquina , "1500573");
+            Set( varsetor ,  Label_setor_16.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
             Set( varselect , 1) ;
@@ -95,25 +95,24 @@ Usinagem_Luva_5ª As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =272
-        X: =341
-        Y: =356
+        Width: =151
+        X: =473
+        Y: =573
         ZIndex: =6
 
-    Btnmaq_159 As button:
+    Btnmaq_154 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
-        DisplayMode: =DisplayMode.View
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =125
+        Height: =169
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "961502075");
-            Set( varsetor ,  Label_setor_17.Text );
+            =Set( varmaquina , "961502092");
+            Set( varsetor ,  Label_setor_16.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
             Set( varselect , 1) ;
@@ -122,25 +121,24 @@ Usinagem_Luva_5ª As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Tooltip: ="CAF máquina não cadastrado"
-        Width: =272
-        X: =341
-        Y: =507
+        Width: =151
+        X: =473
+        Y: =783
         ZIndex: =7
 
-    Btnmaq_160 As button:
+    Btnmaq_155 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =125
+        Height: =169
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "951500922");
-            Set( varsetor ,  Label_setor_17.Text );
+            =Set( varmaquina , "201405004850");
+            Set( varsetor ,  Label_setor_16.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
             Set( varselect , 1) ;
@@ -149,62 +147,8 @@ Usinagem_Luva_5ª As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =272
-        X: =341
-        Y: =657
+        Width: =151
+        X: =154
+        Y: =573
         ZIndex: =8
-
-    Btnmaq_161 As button:
-        DisabledColor: =RGBA(0, 0, 0, 0)
-        DisabledFill: =RGBA(0, 0, 0, 0)
-        Fill: =RGBA(0, 0, 0, 0)
-        Height: =125
-        HoverColor: =RGBA(0, 0, 0, 0)
-        HoverFill: |-
-            =RGBA(4, 114, 14, 0.9)
-            
-            //ColorFade(RGBA(56; 96; 178; 1); -20%)
-        OnSelect: |
-            =Set( varmaquina , "3353217007");
-            Set( varsetor ,  Label_setor_17.Text );
-            Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
-            Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
-            Set( varselect , 1) ;
-            Set(varDelay,false);
-            Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & DataCardhora_inicio.Selected.Result) ; Set(varDelta , 0) ;
-            NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
-        Size: =24
-        Text: =""
-        Width: =272
-        X: =341
-        Y: =808
-        ZIndex: =9
-
-    Btnmaq_153 As button:
-        DisabledColor: =RGBA(0, 0, 0, 0)
-        DisabledFill: =RGBA(0, 0, 0, 0)
-        DisplayMode: =DisplayMode.View
-        Fill: =RGBA(0, 0, 0, 0)
-        Height: =125
-        HoverColor: =RGBA(0, 0, 0, 0)
-        HoverFill: |-
-            =RGBA(4, 114, 14, 0.9)
-            
-            //ColorFade(RGBA(56; 96; 178; 1); -20%)
-        OnSelect: |
-            =Set( varmaquina , "951500943");
-            Set( varsetor ,  Label_setor_17.Text );
-            Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
-            Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
-            Set( varselect , 1) ;
-            Set(varDelay,false);
-            Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & DataCardhora_inicio.Selected.Result) ; Set(varDelta , 0) ;
-            NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
-        Size: =24
-        Text: =""
-        Tooltip: ="CAF máquina não cadastrado"
-        Width: =272
-        X: =341
-        Y: =958
-        ZIndex: =10
 
