--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -139,6 +139,7 @@
     "Usinagem_Luva_1ª2ª",
     "Usinagem_Luva_3ª4ª",
     "Usinagem_Luva_5ª",
-    "Usinagem_Marcha_Re"
+    "Usinagem_Marcha_Re",
+    "Usinagem_Planetária"
   ]
 }
