--- a/Levantamento de Perdas/Src/Usinagem_Luva_1%aa2%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Luva_1%aa2%aa.fx.yaml
@@ -4,7 +4,7 @@ Usinagem_Luva_1ª2ª As screen:
 
     Image3_14 As image:
         Height: =968
-        Image: ='Usinagem_Luva_1ª2ª_1'
+        Image: =Usinagem_Luva_1ª2ª_1
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
