--- a/Levantamento de Perdas/Src/Usinagem_Marcha_Re.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Marcha_Re.fx.yaml
@@ -4,7 +4,7 @@ Usinagem_Marcha_Re As screen:
 
     Image3_16 As image:
         Height: =968
-        Image: ='Usinagem_Marcha_Ré'
+        Image: =Usinagem_Marcha_Ré
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
