--- a/Levantamento de Perdas/Src/Usinagem_Planetaria.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Planetaria.fx.yaml
@@ -1,4 +1,4 @@
-Usinagem_Planetária As screen:
+Usinagem_Planetaria As screen:
     BackgroundImage: =Transmissões_foto_bw
     ImagePosition: =ImagePosition.Fill
 
