--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -140,6 +140,7 @@
     "Usinagem_Luva_3ª4ª",
     "Usinagem_Luva_5ª",
     "Usinagem_Marcha_Re",
-    "Usinagem_Planetária"
+    "Usinagem_Planetaria",
+    "Usinagem_Satelite"
   ]
 }
