--- a/Levantamento de Perdas/Src/App.fx.yaml
+++ b/Levantamento de Perdas/Src/App.fx.yaml
@@ -45,18 +45,17 @@ App As appinfo:
          { Role: "Engr._CDTs_3ª_e_4ª";Screen: Engr._CDTs_3ª_e_4ª };
          { Role: "Eixo_primário_e_secundário";Screen: Eixo_primário_e_secundário }; 
          
-         { Role: "Usinagem_Satélite";Screen: Usinagem_Satélite };
-         { Role: "Usinagem_Planetária";Screen: Usinagem_Planetária };
-         { Role: "Usinagem_Marcha_Ré";Screen: Usinagem_Marcha_Ré };
+        
+        
          
          */
         
-        
-         { Role: "Usinagem_Marcha_Ré",Screen: Usinagem_Marcha_Re },
+         { Role: "Usinagem_Satelite",Screen: Usinagem_Satelite },
+         { Role: "Usinagem_Planetaria",Screen: Usinagem_Planetaria },
+         { Role: "Usinagem_Marcha_Re",Screen: Usinagem_Marcha_Re },
          { Role: "Usinagem_Luva_5ª",Screen: Usinagem_Luva_5ª },
          { Role: "Usinagem_Luva_3ª4ª",Screen: Usinagem_Luva_3ª4ª },
          { Role: "Usinagem_Luva_1ª2ª",Screen: Usinagem_Luva_1ª2ª },
-        
          { Role: "Usinagem_Coroinha",Screen: Usinagem_Coroinha },
          { Role: "Usinagem_Engr_CDZ_5ª",Screen: Usinagem_Engr_CDZ_5ª },
          { Role: "Usinagem_Engr_CDZ_4ª",Screen: Usinagem_Engr_CDZ_4ª },
