--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -141,6 +141,7 @@
     "Usinagem_Luva_5ª",
     "Usinagem_Marcha_Re",
     "Usinagem_Planetaria",
-    "Usinagem_Satelite"
+    "Usinagem_Satelite",
+    "Usinagem_Caixa_Diferencial_Completa"
   ]
 }
