--- a/Levantamento de Perdas/Src/Usinagem_Engr_CDZ_5%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Engr_CDZ_5%aa.fx.yaml
@@ -125,32 +125,6 @@ Usinagem_Engr_CDZ_5ª As screen:
         Y: =799
         ZIndex: =8
 
-    Btnmaq_118 As button:
-        DisabledColor: =RGBA(0, 0, 0, 0)
-        DisabledFill: =RGBA(0, 0, 0, 0)
-        Fill: =RGBA(0, 0, 0, 0)
-        Height: =150
-        HoverColor: =RGBA(0, 0, 0, 0)
-        HoverFill: |-
-            =RGBA(4, 114, 14, 0.9)
-            
-            //ColorFade(RGBA(56; 96; 178; 1); -20%)
-        OnSelect: |
-            =Set( varmaquina , "81500086");
-            Set( varsetor ,  Label_setor_12.Text );
-            Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
-            Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
-            Set( varselect , 1) ;
-            Set(varDelay,false);
-            Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & DataCardhora_inicio.Selected.Result) ; Set(varDelta , 0) ;
-            NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
-        Size: =24
-        Text: =""
-        Width: =167
-        X: =470
-        Y: =917
-        ZIndex: =9
-
     Btnmaq_117 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
@@ -173,6 +147,7 @@ Usinagem_Engr_CDZ_5ª As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
+        Tooltip: ="Máquina sem CAF no sistema"
         X: =155
         Y: =372
         ZIndex: =10
