--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -142,6 +142,9 @@
     "Usinagem_Marcha_Re",
     "Usinagem_Planetaria",
     "Usinagem_Satelite",
-    "Usinagem_Caixa_Diferencial_Completa"
+    "Usinagem_Caixa_Diferencial_Completa",
+    "Retífica_Eixo_Primário",
+    "Retífica_Eixo_Secundário",
+    "Retífica_Coroa_Cilíndrica"
   ]
 }
