--- a/Levantamento de Perdas/Src/Usinagem_Satelite.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Satelite.fx.yaml
@@ -4,7 +4,7 @@ Usinagem_Satelite As screen:
 
     Image3_19 As image:
         Height: =968
-        Image: ='Usinagem_Satélite'
+        Image: =Usinagem_Satélite
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
