--- a/Levantamento de Perdas/Src/App.fx.yaml
+++ b/Levantamento de Perdas/Src/App.fx.yaml
@@ -37,9 +37,7 @@ App As appinfo:
          { Role: "Retífica_Engr._CDT_3ª";Screen: Retífica_Engr._CDT_3ª };
          { Role: "Retífica_Engr._2ª";Screen: Retífica_Engr._2ª };
          { Role: "Retífica_Engr._1ª";Screen: Retífica_Engr._1ª };
-         { Role: "Retífica_Eixo_Secundário";Screen: Retífica_Eixo_Secundário };
-         { Role: "Retífica_Eixo_Primário";Screen: Retífica_Eixo_Primário };
-         { Role: "Retífica_Coroa_Cilíndrica";Screen: Retífica_Coroa_Cilíndrica };
+        
          { Role: "Luvas_1ª2ª_/_3ª4ª_/_5ª";Screen: Luvas_1ª2ª_/_3ª4ª_/_5ª };
          { Role: "Fornos_Cont";Screen: Fornos_Cont };
          { Role: "Engr._CDTs_3ª_e_4ª";Screen: Engr._CDTs_3ª_e_4ª };
@@ -51,7 +49,9 @@ App As appinfo:
          */
         
         
-        
+         { Role: "Retífica_Eixo_Secundário",Screen: Retífica_Eixo_Secundário },
+         { Role: "Retífica_Eixo_Primário",Screen: Retífica_Eixo_Primário },
+         { Role: "Retífica_Coroa_Cilindrica",Screen: Retífica_Coroa_Cilíndrica },
         
          { Role: "Usinagem_Caixa_Diferencial_Completa",Screen: Usinagem_Caixa_Diferencial_Completa },
          { Role: "Usinagem_Satelite",Screen: Usinagem_Satelite },
