--- a/Levantamento de Perdas/Src/Usinagem_Planetaria.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Planetaria.fx.yaml
@@ -4,7 +4,7 @@ Usinagem_Planetaria As screen:
 
     Image3_18 As image:
         Height: =968
-        Image: ='Usinagem_Planetária_1'
+        Image: =Usinagem_Planetária_1
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
