--- a/Levantamento de Perdas/Src/Ret%edfica_Eixo_Prim%e1rio.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Eixo_Prim%e1rio.fx.yaml
@@ -4,7 +4,7 @@ Retífica_Eixo_Primário As screen:
 
     Image3_5 As image:
         Height: =968
-        Image: ='Retífica_Eixo_Primário_1'
+        Image: =Retífica_Eixo_Primário_1
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
