--- a/Levantamento de Perdas/Src/Ret%edfica_Eixo_Secund%e1rio.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Eixo_Secund%e1rio.fx.yaml
@@ -4,7 +4,7 @@ Retífica_Eixo_Secundário As screen:
 
     Image3_21 As image:
         Height: =968
-        Image: ='Retífica_Eixo_Secundário_1'
+        Image: =Retífica_Eixo_Secundário_1
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
