--- a/Levantamento de Perdas/Src/Ret%edfica_Coroa_Cil%edndrica.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Coroa_Cil%edndrica.fx.yaml
@@ -4,7 +4,7 @@ Retífica_Coroa_Cilíndrica As screen:
 
     Image3_22 As image:
         Height: =968
-        Image: ='Retífica_Coroa_Cilíndrica_1'
+        Image: =Retífica_Coroa_Cilíndrica_1
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
