--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -145,6 +145,14 @@
     "Usinagem_Caixa_Diferencial_Completa",
     "Retífica_Eixo_Primário",
     "Retífica_Eixo_Secundário",
-    "Retífica_Coroa_Cilíndrica"
+    "Retífica_Coroa_Cilíndrica",
+    "Retífica_Engr_1ª",
+    "Retífica_Engr_2ª",
+    "Retífica_Engr_CDT_3ª",
+    "Retífica_Engr_CDZ_3ª",
+    "Retífica_Engr_CDT_4ª",
+    "Retífica_Engr_CDZ_4ª",
+    "Retífica_Engr_CDT_5ª",
+    "Retífica_Engr_CDZ_5ª"
   ]
 }
