--- a/Levantamento de Perdas/Src/Tela_Ini_2912.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2912.fx.yaml
@@ -1,5 +1,14 @@
 Tela_Ini_2912 As screen:
     BackgroundImage: =Transmissões_foto_bw
+    Fill: |-
+        =
+         { Role: "Retífica_Engr_CDZ_5ª",Screen: Retífica_Engr_CDZ_5ª },
+         { Role: "Retífica_Engr_CDZ_4ª",Screen: Retífica_Engr_CDZ_4ª },
+         { Role: "Retífica_Engr_CDZ_3ª",Screen: Retífica_Engr_CDZ_3ª },
+         { Role: "Retífica_Engr_CDT_5ª",Screen: Retífica_Engr_CDT_5ª },
+         { Role: "Retífica_Engr_CDT_4ª",Screen: Retífica_Engr_CDT_4ª },
+         { Role: "Retífica_Engr_CDT_3ª",Screen: Retífica_Engr_CDT_3ª },
+         { Role: "Retífica_Engr_2ª",Screen: Retífica_Engr_2ª },
     ImagePosition: =ImagePosition.Fill
 
     Label_ute_1 As button:
@@ -24,6 +33,9 @@ Tela_Ini_2912 As screen:
 
     Button2_8 As button:
         Height: =Button2_7.Height
+        OnSelect: |-
+            =Navigate(Retífica_Engr_1ª);
+            Set(vartela , "Retífica_Engr_1ª");
         Size: =24
         Text: ="Retífica Engr. 1ª"
         Width: =Button2_7.Width
@@ -45,6 +57,9 @@ Tela_Ini_2912 As screen:
 
     Button2_10 As button:
         Height: =Button2_7.Height
+        OnSelect: |-
+            =Navigate(Retífica_Engr_2ª);
+            Set(vartela , "Retífica_Engr_2ª");
         Size: =24
         Text: ="Retífica Engr. 2ª"
         Width: =Button2_7.Width
@@ -82,6 +97,9 @@ Tela_Ini_2912 As screen:
 
     Button2_12 As button:
         Height: =Button2_7.Height
+        OnSelect: |-
+            =Navigate(Retífica_Engr_CDT_3ª);
+            Set(vartela , "Retífica_Engr_CDT_3ª");
         Size: =24
         Text: ="Retífica Engr. CDT 3ª"
         Width: =Button2_7.Width
@@ -103,6 +121,9 @@ Tela_Ini_2912 As screen:
 
     Button2_14 As button:
         Height: =Button2_7.Height
+        OnSelect: |
+            =Navigate(Retífica_Engr_CDZ_3ª);
+            Set(vartela , "Retífica_Engr_CDZ_3ª");
         Size: =24
         Text: ="Retífica Engr. CDZ 3ª"
         Width: =Button2_7.Width
@@ -124,6 +145,9 @@ Tela_Ini_2912 As screen:
 
     Button2_16 As button:
         Height: =Button2_7.Height
+        OnSelect: |
+            =Navigate(Retífica_Engr_CDT_4ª);
+            Set(vartela , "Retífica_Engr_CDT_4ª");
         Size: =24
         Text: ="Retífica Engr. CDT 4ª"
         Width: =Button2_7.Width
@@ -145,6 +169,9 @@ Tela_Ini_2912 As screen:
 
     Button2_18 As button:
         Height: =Button2_7.Height
+        OnSelect: |-
+            =Navigate(Retífica_Engr_CDZ_4ª);
+            Set(vartela , "Retífica_Engr_CDZ_4ª");
         Size: =24
         Text: ="Retífica Engr. CDZ 4ª"
         Width: =Button2_7.Width
@@ -166,6 +193,9 @@ Tela_Ini_2912 As screen:
 
     Button2_20 As button:
         Height: =Button2_7.Height
+        OnSelect: |-
+            =Navigate(Retífica_Engr_CDT_5ª);
+            Set(vartela , "Retífica_Engr_CDT_5ª");
         Size: =24
         Text: ="Retífica Engr. CDT 5ª"
         Width: =Button2_7.Width
@@ -187,6 +217,9 @@ Tela_Ini_2912 As screen:
 
     Button2_22 As button:
         Height: =Button2_7.Height
+        OnSelect: |-
+            =Navigate(Retífica_Engr_CDZ_5ª);
+            Set(vartela , "Retífica_Engr_CDZ_5ª");
         Size: =24
         Text: ="Retífica Engr. CDZ 5ª"
         Width: =Button2_7.Width
